# Aruco_from_scratch

./: .gitmodules  CMakeLists.txt  README.md  test.cpp  token.txt
Vimba_6_0_TEST/: CMakeLists.txt  Test_cam.cpp
Vimba_6_0_TEST/Calibrator/: CMakeLists.txt
Vimba_6_0_TEST/Calibrator/src/: calibrator.cpp
Vimba_6_0_TEST/Helpers_Cam/: CMakeLists.txt
Vimba_6_0_TEST/Helpers_Cam/src/: ApiController.cpp
Vimba_6_0_TEST/Vimba_all/Documentation/: ReleaseNotes.txt
Vimba_6_0_TEST/Vimba_all/VimbaCSITL/CTI/arm_64bit/: VimbaCSITL.xml
Vimba_6_0_TEST/Vimba_all/VimbaCSITL/Documentation/: ReleaseNotes.txt
aruco_3.1.15/: CMakeLists.txt  arucoConfig.yml  cam_calibration_3.yml  cam_calibration_end.yml  cam_calibration_new.yml  configFile.ini  posageLong.yml  stacked.yml
aruco_3.1.15/Crow/: CMakeLists.txt
aruco_3.1.15/Crow/tests/: CMakeLists.txt  main.cpp
aruco_3.1.15/Custom/: CMakeLists.txt  Calib_new_cam.cpp  aruco_calibration.cpp  calibration_camera.cpp  create_board.cpp  test_Alvium_Camera.cpp  test_MarkerMap.cpp  test_aruco2_Board.cpp  test_aruco2_singleMarkers.cpp  test_aruco3.cpp
aruco_3.1.15/Custom/Alvium_Camera_Helpers/: CMakeLists.txt
aruco_3.1.15/Custom/Alvium_Camera_Helpers/include/: Alvium_Camera.h
aruco_3.1.15/Custom/Alvium_Camera_Helpers/src/: Alvium_Camera.cpp
aruco_3.1.15/Custom/Vimba_6_0/VimbaCPP/Examples/AsynchronousGrab/Console/Source/: ProgramConfig.h
aruco_3.1.15/Custom/Vimba_6_0/VimbaCSITL/: Install.sh  Uninstall.sh
aruco_3.1.15/Custom/Vimba_6_0/VimbaUSBTL/Documentation/: ReleaseNotes.txt
aruco_3.1.15/Custom/aruco_lib/: CMakeLists.txt
aruco_3.1.15/Custom/aruco_lib/include/: aruco.hpp  aruco_samples_utility.hpp
aruco_3.1.15/Custom/aruco_lib/include/aruco/: charuco.hpp
aruco_3.1.15/Custom/aruco_lib/src/: apriltag_quad_thresh.hpp  aruco.cpp  charuco.cpp  create_marker.cpp  dictionary.cpp
aruco_3.1.15/Custom/helpers/: CMakeLists.txt
aruco_3.1.15/Custom/helpers/include/: v4l2_helper.h
aruco_3.1.15/Custom/helpers/src/: utils.cpp
aruco_3.1.15/src/: cvdrawingutils.cpp  cvdrawingutils.h
helpers/: CMakeLists.txt
helpers/include/: i2c_helper.h  utils.h
helpers/src/: i2c_helper.cpp  v4l2_helper.cpp
